--- a/_index.html
+++ b/_index.html
@@ -2,13 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/react-tooltip/dist/react-tooltip.min.css">
+    <link rel="stylesheet" href="src/public/css/index.css">
+    <title>太酷</title>
     <script>require('electron-connect').client.create()</script>
+    <script type="text/javascript" src="build/TaiKu.bundled.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <script type="text/javascript">
+      console.log(process.versions);
+    </script>
   </body>
 </html>
