--- a/_index.html
+++ b/_index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/react-tooltip/dist/react-tooltip.min.css">
-    <link rel="stylesheet" href="src/public/css/index.css">
+    <link rel="stylesheet" href="build/css/index.css">
     <title>太酷</title>
     <script>require('electron-connect').client.create()</script>
     <script type="text/javascript" src="build/TaiKu.bundled.js"></script>
