--- a/_index.html
+++ b/_index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="build/css/index.css">
     <title>太酷</title>
     <script>require('electron-connect').client.create()</script>
-    <script type="text/javascript" src="build/TaiKu.bundled.js"></script>
   </head>
   <body>
+    <div id="fuck">幹ˇ幹幹</div>
+    <div class="content-page"></div>
+    <div class="loading-page global-overlay">
+      <h1><i class="fa fa-circle-o-notch fa-spin"></i> Loading...</h1>
+    </div>
     <script type="text/javascript">
       console.log(process.versions);
     </script>
+    <script type="text/javascript" src="build/TaiKu.bundled.js"></script>
   </body>
 </html>
