Add nav bar and it's actions 添加導覽列

--- a/_index.html
+++ b/_index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/react-tooltip/dist/react-tooltip.min.css">
     <link rel="stylesheet" href="build/css/index.css">
-    <title>太酷</title>
+    <title>卡酷</title>
     <script>require('electron-connect').client.create()</script>
   </head>
   <body>
